cambios en diseno de pagina, se va pestana registro :,(

--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,39 +1,53 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
-    flex-direction: column; /* recordatorio: column 'convierte' en columna, alinea de esa forma, row:modo fila, si uso reverse se invierte !!! importante */
+    flex-direction: column; 
     margin: 0;
     min-height: 100vh;
 }
 
 .header {
-    background-color: #004085; 
-    padding: 20px;
+    background-color: #EEDCD3;
+    padding: 5px 0; 
     text-align: center;
-    height: 50px;
-    justify-content: space-between;
-
+    color: rgb(94, 59, 59);
+    font-family: 'Cinzel', serif;
 }
-.a:hover {
-    
-    color:#004085;
+
+
+.title {
+    font-size: 20px;
+    color: rgb(94, 59, 59); 
+    margin-bottom: 5px;
+    letter-spacing: 2px; 
+    text-transform: uppercase; 
+    white-space: pre;
 }
 
 .links {
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     padding: 0;
     margin: 0;
-    font-size: 25px;
+    font-size: 14px;
+    gap: 20px; 
 }
 
-.links li {
+.links a {
+    color: rgb(94, 59, 59); 
+    text-decoration: none; 
+    font-family: 'Playfair Display', serif; 
     display: inline-block;
+    transition: color 0.3s ease, transform 0.3s ease;
 }
 
 
+.links a:hover {
+    color: #585c5f;
+    transform: scale(1.1); 
+}
 
 .content {
     background-color: #ffffff; 
@@ -60,8 +74,8 @@ body {
 }
 
 footer {
-    background-color: #004085;
-    color: white;
+    background-color: #EEDCD3;
+    color: rgb(94, 59, 59); 
     text-align: center;
     margin-top: auto;
     width: 100%;
@@ -76,6 +90,8 @@ footer p {
     margin: 0;
     font-size: 14px;
     margin-top: 15px;
+    font-family: 'Cinzel', serif;
+
     
 }
 
