--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,98 +1,53 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column; 
-    margin: 0;
-    min-height: 100vh;
-}
 
-.header {
-    background-color: #EEDCD3;
-    padding: 5px 0; 
-    text-align: center;
-    color: rgb(94, 59, 59);
-    font-family: 'Cinzel', serif;
-}
-
-
-.title {
-    font-size: 20px;
-    color: rgb(94, 59, 59); 
-    margin-bottom: 5px;
-    letter-spacing: 2px; 
-    text-transform: uppercase; 
-    white-space: pre;
-}
-
-.links {
-    list-style: none;
-    display: flex;
-    justify-content: center;
+.tabla-galeria {
     width: 100%;
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    gap: 20px; 
+    border-collapse: collapse;
+    margin: 20px 0;
 }
 
-.links a {
-    color: rgb(94, 59, 59); 
-    text-decoration: none; 
-    font-family: 'Playfair Display', serif; 
-    display: inline-block;
-    transition: color 0.3s ease, transform 0.3s ease;
-}
-
-
-.links a:hover {
-    color: #585c5f;
-    transform: scale(1.1); 
-}
-
-.content {
-    background-color: #ffffff; 
-    padding: 40px;
+.tabla-galeria td {
+    padding: 10px;
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-grow: 1;
-    
+    vertical-align: middle;
 }
 
-.content h1 {
-    font-size: 32px;
-    color: #333;
-    margin-right: 20px;
-}
-
-.imagen {
-    max-width: 150px; 
+.tabla-galeria img {
+    width: 100%;
     height: auto;
-    border-radius: 10px; 
+    max-width: 150px;
+    max-height: 150px; 
+    object-fit: cover; 
+    border-radius: 5px; 
 }
 
-footer {
-    background-color: #EEDCD3;
+.tabla-galeria td:hover img {
+    transform: scale(1.3); 
+    transition: transform 0.3s ease; 
+}
+/* --------------------------------------------- */
+
+.text{
+    white-space: pre;
+    font-family: "Italiana", serif;
+    justify-content: center;
+    font-size: medium;
+    display: flex;
+    padding-top: -20px;
+  
+  
+  }
+  
+  .text2 {
+    display: flex;
+    font-size: medium;
     color: rgb(94, 59, 59); 
-    text-align: center;
-    margin-top: auto;
-    width: 100%;
-    margin-top: auto;
-    height: 55px;
+    letter-spacing: 2px;  
+    white-space: pre;
+    font-family: "Italiana", serif;
+    justify-content: center;
 
- 
+  }
 
-}
+/* .contenedor-presentacion{
 
-footer p {
-    margin: 0;
-    font-size: 14px;
-    margin-top: 15px;
-    font-family: 'Cinzel', serif;
-
-    
-}
-
-
+  } */
