--- a/styles/Tabla.css
+++ b/styles/Tabla.css
@@ -1,12 +1,14 @@
 .contenedor {
     max-width: 600px;
     margin: 20px auto;
+    font-family: "Italiana", serif;
+    color: rgb(94, 59, 59) ;
     
     padding: 20px;
-    color: rgb(94, 59, 59);
+
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-family: "Italiana", serif;
+    /* font-family: "Italiana", serif; */
 }
 /*     background-color: #EEDCD3;
     text-align: center;
@@ -22,16 +24,34 @@
     border: 1px solid #ccc;
     padding: 10px;
     text-align: left;
+    font-family: "Italiana", serif;
+    color: rgb(94, 59, 59) ;
+    font-weight: 600;
+
+}
+
+.contenido {
+    min-height: 300px; 
+    min-width: 600px;  
+    transition: all 0.3s ease;
+}
+
+.botones {
+    display: flex;
+    justify-content: space-between; 
+    gap: 10px;
 }
 
 .botones label {
-    background-color: #EEDCD3;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-    display: inline-block;
+  
+        background-color: #EEDCD3;
+        padding: 10px 0;
+        border-radius: 5px;
+        cursor: pointer;
+        font-weight: bold;
+        text-align: center;
+        flex: 1; 
+    
 }
 .botones label:hover {
     background-color: rgb(238, 187, 187);
