--- a/styles/horneado.css
+++ b/styles/horneado.css
@@ -56,13 +56,14 @@ input {
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #EEDCD3;
-    color: black;
     font-size: 18px;
     border-radius: 10px;
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
     text-decoration: none;
+    font-weight: bold;
+    color: rgb(94, 59, 59) ;
 }
 
 .boton-sigamos:hover {
